# flagcaddy

./: .gitignore  BUGFIX_DOMAIN_FILTERING.md  BUGFIX_JSON_ENCODING.md  CHANGES.md  LICENSE  README.md  SHELL_INTEGRATION.md  USAGE.md  notes.md  pyproject.toml
data/: ctf_state.json  next_steps.json
flagcaddy/: __init__.py  analysis.py  capture.py  cli.py  config.py  db.py  engine.py  llm.py  rules.py  shell_integration.sh  web.py
flagcaddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flagcaddy/templates/: index.html
scripts/: log_to_notes.py  manage_workflow.sh  notes_to_actions.py
web/: app.py
web/static/: style.css
web/templates/: index.html
