[project]
name = "flagcaddy"
version = "0.1.0"
description = "Background AI coach for pentesters and CTF competitors"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "click>=8.1.0",
    "watchdog>=3.0.0",
    "pexpect>=4.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
flagcaddy = "flagcaddy.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
